--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task-input,
+.task-label {
   width: 56%;
   display: inline-block;
   flex-grow: 1
@@ -118,12 +119,12 @@ li > label {
 li >    input[type="text"] {
   width: 226px
 }
-button.delete img {
+button.delete-button img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.delete-button img:hover {
   transform: rotateZ(0);
 }
 
