refactor: replace tag selectors according to rule 3.4 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.header .header-img {
   width: 100%;
 }
 .header .header-info {
@@ -35,17 +35,19 @@ body {
 .new-task-wrapper {
   display: flex;
 }
-ul {
+.task-list {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.task-list-item, .task-list-title {
   list-style:none;
 }
-input,button{
+.task-input,
+.task-checkbox,
+.button{
   outline:none;
 }
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -54,12 +56,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.task-list-title,
+.new-task-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -68,7 +70,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.task-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -80,21 +82,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.task-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task-label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.new-task-input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task-list-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -103,47 +105,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task-list-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-checkbox {
   margin: 0 10px;
 }
-li > label {
+.task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.task-list-item .task-input {
   width: 226px
 }
-button.delete-button img {
+.delete-button-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete-button img:hover {
+.delete-button-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks-list label {
+#completed-tasks-list .task-label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list-item .task-input {
   display:none
 }
 
-ul li.edit-mode input[type=text] {
+.task-list-item.edit-mode .task-input {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.task-list-item.edit-mode .task-label {
   display:none;
 }
