refactor: add semicolon after properties according to rule 3.7 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 .task-label {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .new-task-wrapper {
   display: flex;
@@ -125,7 +125,7 @@
   width: 226px;
 }
 .task-list-item .task-input {
-  width: 226px
+  width: 226px;
 }
 .delete-button-img {
   height: 2em;
@@ -138,18 +138,18 @@
 
 /* Completed */
 #completed-tasks-list .task-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-list-item .task-input {
-  display: none
+  display: none;
 }
 
 .task-list-item.edit-mode .task-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .task-list-item.edit-mode .task-label {
